--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "antd": "^4.21.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-query": "^3.39.1",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
@@ -18,7 +19,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "json-server": "json-server __json_server__/db.json --watch --port 3001"
   },
   "eslintConfig": {
     "extends": [
