--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-query": "^3.39.1",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.5",
+    "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
